# toolbox-media-studio

./: .gitignore  README.md
srcs/api/: .env.example  README.md  pyproject.toml
srcs/api/app/: main.py
srcs/api/app/consumers/: __init__.py  crawler_queue_consumer.py  queue_consumer.py
srcs/api/app/core/: azure.py  config.py  config_old.py  dependencies.py  exception_handlers.py  exceptions.py  injection.py  logger.py  logging.py  runtime.py  security.py  startup.py  startup_checks.py
srcs/api/app/core/config/: __init__.py  app_config.py  app_settings.py
srcs/api/app/domain/: crawlers.py  novels.py  requests.py  responses.py  users.py
srcs/api/app/events/: sample_handler.py
srcs/api/app/parsers/: __init__.py
srcs/api/app/providers/: cache_provider.py  crawler_parser_novel543.py  crawler_provider.py  queue_provider.py
srcs/api/app/repositories/: cache_repository.py  novel_repository.py
srcs/api/app/routers/: auth.py  crawlers.py  health.py  novels.py  users.py
srcs/api/app/services/: auth_service.py  crawler_job_service.py  crawler_service.py  novel_service.py  user_service.py
srcs/api/tests/: conftest.py  test_auth.py  test_novels.py  test_startup.py  test_users.py
srcs/api/tests/consumers/: test_crawler_queue_consumer.py
srcs/api/tests/providers/: test_cache_provider.py  test_crawler_provider.py  test_in_memory_cache_provider.py
srcs/api/tests/repositories/: test_cache_repository.py  test_job_repository.py
srcs/api/tests/routes/: test_auth.py  test_crawlers.py  test_novels.py  test_users.py
srcs/api/tests/services/: test_novel543_parser.py
(+174 files in other folders)
