[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-media-studio-api"
version = "0.1.0"
description = "Novel Media Studio — FastAPI domain API (auth slice)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "azure-cosmos>=4.7",
    "azure-storage-blob>=12.24",
    "azure-storage-queue>=12.11",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-jose>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
